# fault_tolerant_online_store

./: .env.prod  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.app.yml  docker-compose.benchmark.yml  docker-compose.cassandra.yml  docker-compose.pgadmin.yml  docker-compose.postgresql.yml  docker-compose.redis.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: __main__.py  application.py  factory.py  lifespan.py  models.py  settings.py
app/api/: api.py  deps.py
app/api/endpoints/: user.py
app/api/v1/: api.py
app/api/v1/endpoints/: user.py
app/orm/: abc.py  abstract.py
app/orm/cassandra/: abc.py  base.py  session.py
app/orm/redis/: abc.py  base.py  session.py
app/orm/sql/: abc.py  base.py  session.py
app/repository/: user.py
app/schemas/: base.py  cart.py  order.py  product.py  user.py
app/service/: unit_of_work.py  user.py
app/uow/: uow.py
benchmark/: locustfile.py
conf/nginx/: server_block.conf
config/postgresql/: haproxy.cfg
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
fault_tolerant_online_store/: __init__.py  __main__.py  conftest.py  loguru_logging.py  settings.py
fault_tolerant_online_store/db/: base.py  utils.py
fault_tolerant_online_store/db/dao/: dummy_dao.py
fault_tolerant_online_store/db/migrations/: env.py
fault_tolerant_online_store/db/models/: __init__.py  dummy_model.py
fault_tolerant_online_store/services/: __init__.py
fault_tolerant_online_store/services/redis/: lifetime.py
fault_tolerant_online_store/tests/: __init__.py  test_dummy.py
fault_tolerant_online_store/web/: __init__.py  application.py  lifetime.py
fault_tolerant_online_store/web/api/: __init__.py  router.py
migrations/: env.py
migrations/versions/: 78509ffc981f_upd.py  c14b7f117d8c_init.py  e8201adb998a_init.py  ebfc07f9f6bc_upd.py
scripts/: alembic_rev.sh  har2locust.sh  poetry_export.sh
(+7 files in other folders)
