[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["coolworld2049 <coolworld2049@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlmodel = "^0.0.16"
fastapi = "^0.109.2"
pydantic-settings = "^2.2.1"
cassandra-driver = "^3.29.0"
redis = "^5.0.1"
uvicorn = {extras = ["standart"], version = "^0.27.1"}
loguru = "^0.7.2"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
